fix color contrast

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.menu .menu-title > * {
+    @apply text-zinc-800;
+  }
